--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/flashhRDC/Bot-Ticket#readme",
   "dependencies": {
+    "dateformat": "^5.0.2",
     "discord.js": "^13.3.1",
+    "fs": "^0.0.1-security",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.14",
     "ms": "^2.1.3"
   }
